welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: reassignment to val
	if (weekday = true){
                    ^sleepIn:3: error: reassignment to val
		if(vacation = false){
                            ^sleepIn:4: error: Boolean(false) does not take parameters
		return false();
                            ^sleepIn:7: error: reassignment to val
	if (weekday = false){
                    ^sleepIn:8: error: reassignment to val
		if(vacation = true){ 
                            ^sleepIn:9: error: Boolean(true) does not take parameters
		return true();
                           ^sleepIn:8: error: type mismatch;
 found   : Unit
 required: Boolean
		if(vacation = true){ 
                ^sleepIn:7: error: type mismatch;
 found   : Unit
 required: Boolean
	if (weekday = false){
        ^